--- a/history/history
+++ b/history/history
@@ -1,1 +1,1 @@
-a:3:{i:0;s:6:"kaunas";i:1;s:6:"kaunas";i:2;s:6:"trakai";}
+a:18:{i:0;s:6:"kaunas";i:1;s:6:"kaunas";i:2;s:6:"trakai";i:3;s:6:"kaunas";i:4;s:6:"kaunas";i:5;s:6:"kaunas";i:6;s:6:"kaunas";i:7;s:6:"kaunas";i:8;s:6:"kaunas";i:9;s:6:"kaunas";i:10;s:7:"vilnius";i:11;s:7:"vilnius";i:12;s:6:"kaunas";i:13;s:6:"kaunas";i:14;s:6:"berlin";i:15;s:7:"vilnius";i:16;s:7:"jamaica";i:17;s:8:"botswana";}
