--- a/history/history
+++ b/history/history
@@ -1,1 +1,1 @@
-a:29:{i:0;s:6:"kaunas";i:1;s:6:"kaunas";i:2;s:6:"trakai";i:3;s:6:"kaunas";i:4;s:6:"kaunas";i:5;s:6:"kaunas";i:6;s:6:"kaunas";i:7;s:6:"kaunas";i:8;s:6:"kaunas";i:9;s:6:"kaunas";i:10;s:7:"vilnius";i:11;s:7:"vilnius";i:12;s:6:"kaunas";i:13;s:6:"kaunas";i:14;s:6:"berlin";i:15;s:7:"vilnius";i:16;s:7:"jamaica";i:17;s:8:"botswana";i:18;s:6:"kaunas";i:19;s:6:"kaunas";i:20;s:6:"kaunas";i:21;s:6:"kaunas";i:22;s:9:"raseiniai";i:23;s:9:"laplandia";i:24;s:7:"lapland";i:25;s:9:"Pyongyang";i:26;s:9:"Pyongyang";i:27;s:9:"Pyongyang";i:28;s:7:"Vilnius";}
+a:39:{i:0;s:6:"kaunas";i:1;s:6:"kaunas";i:2;s:6:"trakai";i:3;s:6:"kaunas";i:4;s:6:"kaunas";i:5;s:6:"kaunas";i:6;s:6:"kaunas";i:7;s:6:"kaunas";i:8;s:6:"kaunas";i:9;s:6:"kaunas";i:10;s:7:"vilnius";i:11;s:7:"vilnius";i:12;s:6:"kaunas";i:13;s:6:"kaunas";i:14;s:6:"berlin";i:15;s:7:"vilnius";i:16;s:7:"jamaica";i:17;s:8:"botswana";i:18;s:6:"kaunas";i:19;s:6:"kaunas";i:20;s:6:"kaunas";i:21;s:6:"kaunas";i:22;s:9:"raseiniai";i:23;s:9:"laplandia";i:24;s:7:"lapland";i:25;s:9:"Pyongyang";i:26;s:9:"Pyongyang";i:27;s:9:"Pyongyang";i:28;s:7:"Vilnius";i:29;s:9:"Pyongyang";i:30;s:9:"Pyongyang";i:31;s:9:"Pyongyang";i:32;s:9:"Pyongyang";i:33;s:7:"Cordoba";i:34;s:12:"Balbieriskis";i:35;s:9:"Pyongyang";i:36;s:9:"Pyongyang";i:37;s:9:"Pyongyang";i:38;s:9:"Pyongyang";}
